--- a/ports/win32/msvc/makefsdata.vcxproj.filters
+++ b/ports/win32/msvc/makefsdata.vcxproj.filters
@@ -7,7 +7,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(LWIP_DIR)\src\apps\httpd\makefsdata\makefsdata.c">
+    <ClCompile Include="..\..\..\..\lwip\src\apps\httpd\makefsdata\makefsdata.c">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
