msvc: added new file nd6_priv.h to project

--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -375,6 +375,7 @@
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\api_msg.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\memp_priv.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\memp_std.h" />
+    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\nd6_priv.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\tcpip_priv.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\tcp_priv.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\api.h" />
