--- a/ports/win32/msvc/lwIP_Test.vcxproj.filters
+++ b/ports/win32/msvc/lwIP_Test.vcxproj.filters
@@ -8,6 +8,12 @@
     <Filter Include="Source Files\apps">
       <UniqueIdentifier>{0582eefd-a68e-45f8-b93c-f828c4794f30}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\addons">
+      <UniqueIdentifier>{ed0627c2-099a-4da8-af0c-142003828f9f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\addons\tcp_isn">
+      <UniqueIdentifier>{4ffb2268-6fc6-44d7-8e3b-2a3f68b8d5a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\test.c">
@@ -52,6 +58,9 @@
     <ClCompile Include="..\..\..\apps\snmp_private_mib\lwip_prvmib.c">
       <Filter>Source Files\apps</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\addons\tcp_isn\tcp_isn.c">
+      <Filter>Source Files\addons\tcp_isn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\apps\chargen\chargen.h">
@@ -92,6 +101,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\apps\snmp_private_mib\private_mib.h">
       <Filter>Source Files\apps</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\tcp_isn\tcp_isn.h">
+      <Filter>Source Files\addons\tcp_isn</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
