--- a/ports/win32/msvc/lwIP.vcxproj
+++ b/ports/win32/msvc/lwIP.vcxproj
@@ -375,7 +375,7 @@
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\apps\tftp_opts.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\apps\tftp_server.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\errno.h" />
-    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\if.h" />
+    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\if_api.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\api_msg.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\memp_priv.h" />
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\memp_std.h" />
