--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -457,6 +457,9 @@
     <ClCompile Include="..\..\..\..\lwip\src\api\if_api.c">
       <Filter>src\api</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\lwip\src\netif\bridgeif.c">
+      <Filter>src\netif</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\lwip\src\apps\snmp\snmp_snmpv2_framework.c">
       <Filter>src\apps\snmp</Filter>
     </ClCompile>
@@ -899,6 +902,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\sockets_priv.h">
       <Filter>src\include\lwip\priv</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\src\include\netif\bridgeif.h">
+      <Filter>src\include\netif</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\src\include\netif\bridgeif_opts.h">
+      <Filter>src\include\netif</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
