win32 port: add new unit test files
Gets unittests builds again for MSVC

--- a/ports/win32/msvc/lwip_unittests.vcxproj
+++ b/ports/win32/msvc/lwip_unittests.vcxproj
@@ -83,6 +83,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\lwip\test\unit\api\test_sockets.c" />
+    <ClCompile Include="..\..\..\..\lwip\test\unit\arch\sys_arch.c" />
     <ClCompile Include="..\..\..\..\lwip\test\unit\core\test_mem.c" />
     <ClCompile Include="..\..\..\..\lwip\test\unit\core\test_pbuf.c" />
     <ClCompile Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.c" />
@@ -95,6 +97,8 @@
     <ClCompile Include="..\..\..\..\lwip\test\unit\lwip_unittests.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\lwip\test\unit\api\test_sockets.h" />
+    <ClInclude Include="..\..\..\..\lwip\test\unit\arch\sys_arch.h" />
     <ClInclude Include="..\..\..\..\lwip\test\unit\core\test_mem.h" />
     <ClInclude Include="..\..\..\..\lwip\test\unit\core\test_pbuf.h" />
     <ClInclude Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.h" />
