--- a/ports/win32/msvc/lwip_unittests.vcxproj.filters
+++ b/ports/win32/msvc/lwip_unittests.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="mdns">
       <UniqueIdentifier>{d454902e-ce5b-48ae-a690-e6490bdbbf17}</UniqueIdentifier>
     </Filter>
+    <Filter Include="api">
+      <UniqueIdentifier>{d9501476-6102-4f14-90bd-35322fbd2fb2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="arch">
+      <UniqueIdentifier>{b04f182c-1910-456d-9388-397dfe82dbc9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\lwip\test\unit\core\test_mem.c">
@@ -48,6 +54,12 @@
     <ClCompile Include="..\..\..\..\lwip\test\unit\lwip_unittests.c" />
     <ClCompile Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.c">
       <Filter>mdns</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\lwip\test\unit\api\test_sockets.c">
+      <Filter>api</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\lwip\test\unit\arch\sys_arch.c">
+      <Filter>arch</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +91,12 @@
     <ClInclude Include="..\..\..\..\lwip\test\unit\lwipopts.h" />
     <ClInclude Include="..\..\..\..\lwip\test\unit\mdns\test_mdns.h">
       <Filter>mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\test\unit\api\test_sockets.h">
+      <Filter>api</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\test\unit\arch\sys_arch.h">
+      <Filter>arch</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
